HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldNonBitcopyMove/Expected.uv
//! Expected diagnostic metadata for the RecordFieldNonBitcopyMove rejected-source specimen.

expectedDiagnostic("E-TYP-1907", "rule.16.Record-Field-NonBitcopy-Move")
